# Philosophers

./: .gitignore  CMakeLists.txt  error_msg.h  parser.c  philo.c  philo.h  pull_request_test.txt  utils.c
philo/: Makefile  death.c  free.c  init.c  live.c  parser.c  philo.c  thread.c
philo/includes/: message.h  philo.h
philo/sources/: death.c  error.c  free.c  init.c  live.c  parser.c  philo.c  thread.c  utils.c
philo_bonus/: Makefile  philo_bonus.c
philo_bonus/includes/: message_bonus.h  philo_bonus.h
philo_bonus/sources/: death_bonus.c  error_bonus.c  init_bonus.c  live_bonus.c  parser_bonus.c  philo_bonus.c  process_bonus.c  utils_bonus.c
philo_rework/includes/: message.h  philo.h
philo_rework/sources/: error.c  free.c  init.c  live.c  parser.c  philo.c  thread.c  utils.c
